Closed Bug 799725 Opened 13 years ago Closed 5 years ago

[css-flexbox] "align-self:stretch" doesn't work on table flex items

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: dholbert, Assigned: TYLin)

References

(Blocks 1 open bug)

Details

(Keywords: testcase)

Attachments

(5 files)

Attached file testcase 1
STR: Load testcase, in a profile with layout.css.flexbox.enabled = true EXPECTED RESULTS: Lime "abc" regions stretch from top-to-bottom in the first gray block, and from left-to-right in the second gray block. ACTUAL RESULTS: Lime "abc" regions shrinkwrap their text. Firefox nightly and google-chrome dev channel (ver 24.0.1284.2 dev) show ACTUAL RESULTS. opera-next (12.10 beta RC) shows EXPECTED RESULTS.
Summary: "align-self:stretch" doesn't work on tables → [css-flexbox] "align-self:stretch" doesn't work on table flex items
Chrome dev channel (Version 55.0.2873.0 dev (64-bit) and Edge 14 match our behavior here... So this behavior seems to be interoperable at this point, though I'm not sure why.
(Per comment 0, I guess Chrome matched our behavior back when I filed this, too.)
Blocks: 1316923
Attached image Opera 12 test.png
Attached file Testcase2.html
Improve test cases.

I have idea on fixing this after fixing bug 1674302.

Depends on: 1674302
Flags: needinfo?(aethanyc)

We also need to ignore aspect-ratio when measuring the content
block-size, because we don't want the stretched inline-size transferring
through aspect-ratio to set block-size. Otherwise,
testing/web-platform/tests/css/css-flexbox/flex-minimum-height-flex-items-023.html
is going to break.

table-as-item-stretch-cross-size-3 is adapted from the testcase in bug
799725 comment 1. Note: stretching in the cross axis that is a block
axis has been fixed by bug 1674302.

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED

This is a preparation patch for Part 2 -- We need a way to ignore
aspect-ratio when measuring a flex item's content block-size, because we
don't want the stretched inline-size transferring through aspect-ratio
to set block-size.

This patch hasn't changed the behavior yet. Part 2 is going to utilize
mAspectRatio.

Attachment #9204968 - Attachment description: Bug 799725 - Use StyleSizeOverrides to stretch flex item's inline-size. → Bug 799725 Part 2 - Use StyleSizeOverrides to stretch flex item's inline-size.
Flags: needinfo?(aethanyc)
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8cad4644254f Part 1 - Support AspectRatio in StyleSizeOverrides. r=dholbert https://hg.mozilla.org/integration/autoland/rev/0036bd0a6056 Part 2 - Use StyleSizeOverrides to stretch flex item's inline-size. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/27783 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Upstream PR merged by moz-wptsync-bot
Blocks: 1869722
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: