Bug 799725 Part 1 - Support AspectRatio in StyleSizeOverrides. r=dholbert

This is a preparation patch for Part 2 -- We need a way to ignore
aspect-ratio when measuring a flex item's content block-size, because we
don't want the stretched inline-size transferring through aspect-ratio
to set block-size.

This patch hasn't changed the behavior yet. Part 2 is going to utilize
mAspectRatio.

Differential Revision: https://phabricator.services.mozilla.com/D106383