layout/generic/nsContainerFrame.cpp
@@ -2394,6 +2394,9 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
   const auto& styleBSize = aSizeOverrides.mStyleBSize
                                ? *aSizeOverrides.mStyleBSize
                                : stylePos->BSize(aWM);
+  const auto& aspectRatio =
+      aSizeOverrides.mAspectRatio ? *aSizeOverrides.mAspectRatio : aAspectRatio;
+
   auto* parentFrame = GetParent();
   const bool isGridItem = IsGridItem();
   const bool isFlexItem =
@@ -2590,11 +2593,11 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
 
       if (hasIntrinsicISize) {
         tentISize = intrinsicISize;
-      } else if (hasIntrinsicBSize && aAspectRatio) {
-        tentISize = aAspectRatio.ComputeRatioDependentSize(
+      } else if (hasIntrinsicBSize && aspectRatio) {
+        tentISize = aspectRatio.ComputeRatioDependentSize(
             LogicalAxis::eLogicalAxisInline, aWM, intrinsicBSize,
             boxSizingAdjust);
-      } else if (aAspectRatio) {
+      } else if (aspectRatio) {
         tentISize =
             aCBSize.ISize(aWM) - boxSizingToMarginEdgeISize;  // XXX scrollbar?
         if (tentISize < 0) {
@@ -2614,8 +2617,8 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
 
       if (hasIntrinsicBSize) {
         tentBSize = intrinsicBSize;
-      } else if (aAspectRatio) {
-        tentBSize = aAspectRatio.ComputeRatioDependentSize(
+      } else if (aspectRatio) {
+        tentBSize = aspectRatio.ComputeRatioDependentSize(
             LogicalAxis::eLogicalAxisBlock, aWM, tentISize, boxSizingAdjust);
       } else {
         tentBSize = fallbackIntrinsicSize.BSize(aWM);
@@ -2631,31 +2634,31 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
         tentISize = iSize;  // * / 'stretch'
         if (stretchB == eStretch) {
           tentBSize = bSize;  // 'stretch' / 'stretch'
-        } else if (stretchB == eStretchPreservingRatio && aAspectRatio) {
+        } else if (stretchB == eStretchPreservingRatio && aspectRatio) {
           // 'normal' / 'stretch'
-          tentBSize = aAspectRatio.ComputeRatioDependentSize(
+          tentBSize = aspectRatio.ComputeRatioDependentSize(
               LogicalAxis::eLogicalAxisBlock, aWM, iSize, boxSizingAdjust);
         }
       } else if (stretchB == eStretch) {
         tentBSize = bSize;  // 'stretch' / * (except 'stretch')
-        if (stretchI == eStretchPreservingRatio && aAspectRatio) {
+        if (stretchI == eStretchPreservingRatio && aspectRatio) {
           // 'stretch' / 'normal'
-          tentISize = aAspectRatio.ComputeRatioDependentSize(
+          tentISize = aspectRatio.ComputeRatioDependentSize(
               LogicalAxis::eLogicalAxisInline, aWM, bSize, boxSizingAdjust);
         }
-      } else if (stretchI == eStretchPreservingRatio && aAspectRatio) {
+      } else if (stretchI == eStretchPreservingRatio && aspectRatio) {
         tentISize = iSize;  // * (except 'stretch') / 'normal'
-        tentBSize = aAspectRatio.ComputeRatioDependentSize(
+        tentBSize = aspectRatio.ComputeRatioDependentSize(
             LogicalAxis::eLogicalAxisBlock, aWM, iSize, boxSizingAdjust);
         if (stretchB == eStretchPreservingRatio && tentBSize > bSize) {
           // Stretch within the CB size with preserved intrinsic ratio.
           tentBSize = bSize;  // 'normal' / 'normal'
-          tentISize = aAspectRatio.ComputeRatioDependentSize(
+          tentISize = aspectRatio.ComputeRatioDependentSize(
               LogicalAxis::eLogicalAxisInline, aWM, bSize, boxSizingAdjust);
         }
-      } else if (stretchB == eStretchPreservingRatio && aAspectRatio) {
+      } else if (stretchB == eStretchPreservingRatio && aspectRatio) {
         tentBSize = bSize;  // 'normal' / * (except 'normal' and 'stretch')
-        tentISize = aAspectRatio.ComputeRatioDependentSize(
+        tentISize = aspectRatio.ComputeRatioDependentSize(
             LogicalAxis::eLogicalAxisInline, aWM, bSize, boxSizingAdjust);
       }
 
@@ -2663,7 +2666,7 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
       // applying the min/max-size.  We don't want that when we have 'stretch'
       // in either axis because tentISize/tentBSize is likely not according to
       // ratio now.
-      if (aAspectRatio && stretchI != eStretch && stretchB != eStretch) {
+      if (aspectRatio && stretchI != eStretch && stretchB != eStretch) {
         nsSize autoSize = nsLayoutUtils::ComputeAutoSizeWithIntrinsicDimensions(
             minISize, minBSize, maxISize, maxBSize, tentISize, tentBSize);
         // The nsSize that ComputeAutoSizeWithIntrinsicDimensions returns will
@@ -2681,8 +2684,8 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
       // 'auto' iSize, non-'auto' bSize
       bSize = NS_CSS_MINMAX(bSize, minBSize, maxBSize);
       if (stretchI != eStretch) {
-        if (aAspectRatio) {
-          iSize = aAspectRatio.ComputeRatioDependentSize(
+        if (aspectRatio) {
+          iSize = aspectRatio.ComputeRatioDependentSize(
               LogicalAxis::eLogicalAxisInline, aWM, bSize, boxSizingAdjust);
         } else if (hasIntrinsicISize) {
           if (!(aFlags.contains(ComputeSizeFlag::IClampMarginBoxMinSize) &&
@@ -2700,8 +2703,8 @@ LogicalSize nsContainerFrame::ComputeSizeWithIntrinsicDimensions(
       // non-'auto' iSize, 'auto' bSize
       iSize = NS_CSS_MINMAX(iSize, minISize, maxISize);
       if (stretchB != eStretch) {
-        if (aAspectRatio) {
-          bSize = aAspectRatio.ComputeRatioDependentSize(
+        if (aspectRatio) {
+          bSize = aspectRatio.ComputeRatioDependentSize(
               LogicalAxis::eLogicalAxisBlock, aWM, iSize, boxSizingAdjust);
         } else if (hasIntrinsicBSize) {
           if (!(aFlags.contains(ComputeSizeFlag::BClampMarginBoxMinSize) &&
